[package]
name        = "slidecodec-j2k"
description = "JPEG 2000 inspector and decoder for whole-slide images"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[lib]
name = "slidecodec_j2k"
path = "src/lib.rs"

[dependencies]
slidecodec-core = { path = "../slidecodec-core", version = "0.0.0" }
slidecodec-j2k-native = { path = "../slidecodec-j2k-native", version = "0.0.0" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
slidecodec-j2k-compare = { path = "../slidecodec-j2k-compare", version = "0.0.0" }
slidecodec-j2k-native = { path = "../slidecodec-j2k-native", version = "0.0.0" }

[[bench]]
name = "compare"
harness = false

[lints.rust]
unsafe_code     = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
too_many_lines          = "allow"
cast_possible_truncation = "allow"
cast_sign_loss          = "allow"
cast_possible_wrap      = "allow"
doc_markdown            = "allow"
